Added cover page, style changes and bibliography

--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -1,24 +1,150 @@
-@book{book_key,
-	address = {City},
-	publisher = {Publisher},
-	author = {Smith, John},
-	title = {Book title},
-	year = {2012},
-	volume = {3},
-	series = {2},
-	edition = {1},
-	pages = {123--200},
-	month = {January}
+@book{andersonComputationalFluidMechanics2016,
+  title = {Computational Fluid Mechanics and Heat Transfer},
+  author = {Anderson, Dale and Tannehill, John C. and Pletcher, Richard H.},
+  date = {2016},
+  publisher = {{CRC Press}}
 }
 
-@article{article_key,
-	address = {City},
-	publisher = {Publisher},
-	author = {Smith, James},
-	title = {Article title},
-	year = {2013},
-	volume = {14},
-	number = {6},
-	pages = {1--8},
-	month = {March}
+@article{bardinaTurbulenceModelingValidation1997,
+  title = {Turbulence Modeling Validation, Testing, and Development},
+  author = {Bardina, Jorge E. and Huang, Peter G. and Coakley, Thomas J.},
+  date = {1997},
+  file = {/home/carlos-sia/Zotero/storage/2VXDTYBF/Bardina et al. - 1997 - Turbulence modeling validation, testing, and devel.pdf;/home/carlos-sia/Zotero/storage/6B8JKPSN/search.html}
+}
+
+@article{chou1945velocity,
+  title = {On Velocity Correlations and the Solutions of the Equations of Turbulent Fluctuation},
+  author = {Chou, P Yo},
+  date = {1945},
+  journaltitle = {Quarterly of Applied Mathematics},
+  volume = {3},
+  pages = {38--54},
+  number = {1}
+}
+
+@book{davidson2015turbulence,
+  title = {Turbulence: An Introduction for Scientists and Engineers},
+  author = {Davidson, Peter Alan},
+  date = {2015},
+  publisher = {{Oxford University Press}}
+}
+
+@book{hirschNumericalComputationInternal2007a,
+  title = {Numerical Computation of Internal and External Flows: {{The}} Fundamentals of Computational Fluid Dynamics},
+  shorttitle = {Numerical Computation of Internal and External Flows},
+  author = {Hirsch, Charles},
+  date = {2007},
+  publisher = {{Elsevier}},
+  file = {/home/carlos-sia/Zotero/storage/IFUHKVKY/books.html}
+}
+
+@article{jonesPredictionLaminarizationTwoequation1972,
+  title = {The Prediction of Laminarization with a Two-Equation Model of Turbulence},
+  author = {Jones, W. P. and Launder, Brian Edward},
+  date = {1972},
+  journaltitle = {International journal of heat and mass transfer},
+  volume = {15},
+  pages = {301--314},
+  file = {/home/carlos-sia/Zotero/storage/N8ND5XDW/Jones and Launder - 1972 - The prediction of laminarization with a two-equati.pdf;/home/carlos-sia/Zotero/storage/YT7TCN3K/0017931072900762.html},
+  number = {2}
+}
+
+@article{launderApplicationEnergydissipationModel1974,
+  title = {Application of the Energy-Dissipation Model of Turbulence to the Calculation of Flow near a Spinning Disc},
+  author = {Launder, Brian Edward and Sharma, B. I.},
+  date = {1974},
+  journaltitle = {Letters in heat and mass transfer},
+  volume = {1},
+  pages = {131--137},
+  file = {/home/carlos-sia/Zotero/storage/8Q3ZCZGZ/Launder and Sharma - 1974 - Application of the energy-dissipation model of tur.pdf},
+  number = {2}
+}
+
+@book{levequeFiniteVolumeMethods2002,
+  title = {Finite Volume Methods for Hyperbolic Problems},
+  author = {LeVeque, Randall J.},
+  date = {2002},
+  volume = {31},
+  publisher = {{Cambridge university press}},
+  file = {/home/carlos-sia/Zotero/storage/NQMYDGJN/LeVeque - 2002 - Finite volume methods for hyperbolic problems.pdf;/home/carlos-sia/Zotero/storage/3FYQVB3R/books.html}
+}
+
+@book{munsonFluidMechanics2013a,
+  title = {Fluid Mechanics},
+  author = {Munson, Bruce Roy and Okiishi, Theodore Hisao and Huebsch, Wade W. and Rothmayer, Alric P.},
+  date = {2013},
+  publisher = {{Wiley Singapore}},
+  file = {/home/carlos-sia/Zotero/storage/SDNYPX45/Munson et al. - 2013 - Fluid mechanics.pdf}
+}
+
+@article{pope2001turbulent,
+  title = {Turbulent Flows},
+  author = {Pope, Stephen B},
+  date = {2001},
+  publisher = {{IOP Publishing}}
+}
+
+@article{prandtlBerichtUberUntersuchungen1925,
+  title = {7. {{Bericht}} Über {{Untersuchungen}} Zur Ausgebildeten {{Turbulenz}}},
+  author = {Prandtl, Ludwig},
+  date = {1925},
+  journaltitle = {ZAMM-Journal of Applied Mathematics and Mechanics/Zeitschrift für Angewandte Mathematik und Mechanik},
+  volume = {5},
+  pages = {136--139},
+  file = {/home/carlos-sia/Zotero/storage/9UBI7WWS/zamm.html},
+  number = {2}
+}
+
+@article{reynoldsIVDynamicalTheory1895,
+  title = {{{IV}}. {{On}} the Dynamical Theory of Incompressible Viscous Fluids and the Determination of the Criterion},
+  author = {Reynolds, Osborne},
+  date = {1895},
+  journaltitle = {Philosophical transactions of the royal society of london.(a.)},
+  pages = {123--164},
+  file = {/home/carlos-sia/Zotero/storage/ZUKMI5GC/Reynolds - 1895 - IV. On the dynamical theory of incompressible visc.pdf;/home/carlos-sia/Zotero/storage/3RIIQJKX/rsta.1895.html},
+  number = {186}
+}
+
+@inproceedings{rumseyRecentDevelopmentsTurbulence2015,
+  title = {Recent Developments on the Turbulence Modeling Resource Website},
+  booktitle = {22nd {{AIAA Computational Fluid Dynamics Conference}}},
+  author = {Rumsey, Christopher L.},
+  date = {2015},
+  pages = {2927},
+  file = {/home/carlos-sia/Zotero/storage/LM4CD6YQ/Rumsey - 2015 - Recent developments on the turbulence modeling res.pdf}
+}
+
+@inproceedings{spalartOneequationTurbulenceModel1992,
+  title = {A One-Equation Turbulence Model for Aerodynamic Flows},
+  booktitle = {30th Aerospace Sciences Meeting and Exhibit},
+  author = {Spalart, Philippe and Allmaras, Steven},
+  date = {1992},
+  pages = {439},
+  file = {/home/carlos-sia/Zotero/storage/Z2D3MPG5/Spalart and Allmaras - 1992 - A one-equation turbulence model for aerodynamic fl.pdf}
+}
+
+@article{toroRiemannSolversEvolved2006,
+  title = {Riemann Solvers with Evolved Initial Conditions},
+  author = {Toro, E. F.},
+  date = {2006},
+  journaltitle = {International journal for numerical methods in fluids},
+  volume = {52},
+  pages = {433--453},
+  file = {/home/carlos-sia/Zotero/storage/4CZ76X37/fld.html},
+  number = {4}
+}
+
+@article{whiteFluidMechanics2015,
+  title = {Fluid Mechanics},
+  author = {White, Frank M.},
+  date = {2015},
+  file = {/home/carlos-sia/Zotero/storage/6LXANU4I/1989762.html}
+}
+
+@book{wilcox1998turbulence,
+  title = {Turbulence Modeling for {{CFD}}},
+  author = {Wilcox, David C and others},
+  date = {1998},
+  volume = {2},
+  publisher = {{DCW industries La Canada, CA}}
 }
