Updated links in jupyter boxes

--- a/book/Parts/Part2.tex
+++ b/book/Parts/Part2.tex
@@ -427,7 +427,7 @@ Beyond $a = 3.57\hdots$ the entire concept of a cycle breaks down, and all possi
 \end{figure}
 The complete behaviour of Equation~\ref{eq:logistic_function} can be observed in Figure~\ref{fig:logistic_map} for a range of values of $a$ in the range $a\in[1,4]$. An interesting thought experiment is to consider what happens to our system when we start with some initial guess $x_0$, and some perturbed initial guess $x_0 + \epsilon$, where $\epsilon$ is a small number. In the case of small values of $a$ both of these solution converge to the same fixed point. However, as $a$ gets larger this predictability starts to break down. Eventually, with a large value of $a$, and given enough iterations, the two solutions will diverge from one another and it will be impossible to discern that they had almost the exact same initial condition. Hence, with certain choices of $a$ the logistic equations is chaotic, resulting in complex behaviour and extreme sensitivity to initial conditions. Furthermore, this implies that there is an {\it irreversible} nature to chaotic systems, that is given a final solution it is not possible to determine with any certainty what the initial condition was, because very similar initial conditions yield completely different final solutions.
 \begin{jupyternote}
-	Check out the Chaos notebook on \url{\binderurl}. You can also download the files from the Gitlab repository \url{\repourl}.
+	Check out the Chaos Jupyter notebook \href{\binderurl}{\underline{here}}. You can also download the files from the Gitlab repository \href{\repourl}{\underline{here}}.
 \end{jupyternote}
 
 \subsection{Chaos and Navier-Stokes}
