--- a/book/main.tex
+++ b/book/main.tex
@@ -54,8 +54,8 @@
 %	USEFUL TEXT VARIABLES
 %----------------------------------------------------------------------------------------
 
-\newcommand{\repourl}{www.gitlab.com/bvermeir/book-cfd}
-\newcommand{\binderurl}{https://mybinder.org/v2/gl/bvermeir\%2Fbook-cfd/master}
+\newcommand{\repourl}{https://gitlab.com/bvermeir/book-cfd}
+\newcommand{\binderurl}{https://tinyurl.com/cfd-binder}
 
 \begin{document}
 
